# unlearning-shell-scripting

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml
demo/: log_summary.txt  the_service.py
src/: all_tests.py  awk.py  cleanup_example.py  find_classes.py  find_classes_cli.py  find_example.py  sample.sh  summary_example.py
tests/: test_awk.py  test_find_example.py
